adjust pallette block render styling, allow browser to handle deltaX scrolling of block lines, fix block text align vertical, fix block line index to be fixed width, blackaction css impl

--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -49,8 +49,9 @@
   
   /**Align text vertical center*/
   display: flex;
-  align-content: center;
-  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
   
   font-family: 'Courier New', Courier, monospace;
   font-style: italic;
@@ -104,9 +105,11 @@
 }
 
 .blockline_index {
-  flex: 0.01;
+  flex: 1;
   margin-right: 1em;
   margin-left: 1em;
+  max-width: 1em;
+  min-width: 1em;
 
   display: flex;
   align-content: center;
@@ -115,4 +118,16 @@
 
 .blockline_selected {
   background-color: #0f0c0f;
+}
+
+.blockaction {
+  background-color: #0f0c0f;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  margin: 0.5em;
+  text-indent: 1em;
+  flex: 1;
+  border-radius: 0.5em;
+  font-family: 'Courier New', Courier, monospace;
 }
